--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -4,25 +4,25 @@
       <div class="flex flex-col space-y-4">
         <div class="flex flex-col space-y-2">
           <div class="field">
-            <label for="email">Email</label>
+            <label class="input-label" for="username">Username</label>
             <input
               type="text"
               pInputText
-              formControlName="email"
+              formControlName="username"
               class="w-full"
-              name="email"
-              placeholder="Type your email"
+              name="username"
+              placeholder="Type your username"
             />
             <small
-              *ngIf="email?.invalid && (email?.dirty || email?.touched)"
+              *ngIf="username?.invalid && (username?.dirty || username?.touched)"
               class="block p-error"
             >
-              <div *ngIf="email?.errors?.['required']">Email is required.</div>
-              <div *ngIf="email?.errors?.['email']">Email should be valid</div>
+              <div *ngIf="username?.errors?.['required']">username is required.</div>
+              <div *ngIf="username?.errors?.['username']">username should be valid</div>
             </small>
           </div>
           <div class="field">
-            <label for="password">Password</label>
+            <label class="input-label" for="password">Password</label>
             <input
               type="password"
               pInputText
